fixed masks cutoff

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ header h1{
 }
 .banner{
     position: relative;
+    top: 50px;
 }
 .banner img{
     width: 100%;
